LG-1 use thymeleaf, add spring security and user registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
+#suppress inspection "AlphaUnsortedPropertiesFile" for whole file
+#suppress inspection "UnusedProperty" for whole file
+
+##change this to create to let Hibernate create the tables, use in first app run (when run a unit test)
 spring.jpa.hibernate.ddl-auto=none
+
+##logging sql
+spring.jpa.properties.hibernate.format_sql=true
+##alternative logging
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
